<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_export_keystore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_export_keystore"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/titlebarcolor"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/export_keystore"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_text_size" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <TextView
            android:id="@+id/tv_store_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/store_offline"
            android:textColor="@color/bottom_blue"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_store_offline_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_store_offline"
            android:layout_marginTop="3dp"
            android:text="@string/store_offline_desc"
            android:textColor="@color/bottom_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_dont_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_store_offline_desc"
            android:layout_marginTop="15dp"
            android:text="@string/dont_internet"
            android:textColor="@color/bottom_blue"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_dont_internet_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_dont_internet"
            android:layout_marginTop="3dp"
            android:text="@string/dont_internet_desc"
            android:textColor="@color/bottom_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_keystore_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_dont_internet_desc"
            android:layout_marginTop="15dp"
            android:text="@string/keystore_value"
            android:textColor="@color/bottom_blue"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/keystore_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_keystore_value"
            android:layout_marginTop="15dp"
            android:background="@color/gray_bg"
            android:textColor="#000000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_copy_keystore"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="38dp"
            android:background="@drawable/shape_button"
            android:text="@string/copy_keystore"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>