<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_about_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/titlebarcolor"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_text_size" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_about"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_marginTop="@dimen/toolbar_height"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_logo_about"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_appname_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo_about"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/titlebarcolor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_version_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_appname_about"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/version"
            android:textColor="@color/bottom_gray"
            android:textSize="13sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_about"
        android:layout_marginTop="13dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/default_padding_left_right"
        android:paddingRight="@dimen/default_padding_left_right">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_card_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/official_website"
                android:textColor="@color/titlebarcolor"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/official_website_content"
                android:textColor="@color/bottom_gray"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_bg" />

        </RelativeLayout>
        <!--电报群中文组-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_card_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/telegram_group_cn"
                android:textColor="@color/titlebarcolor"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/telegram_group_cn_content"
                android:textColor="@color/bottom_gray"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_bg" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_card_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/telegram_group_en"
                android:textColor="@color/titlebarcolor"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/telegram_group_en_content"
                android:textColor="@color/bottom_gray"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_bg" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_card_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/email_address"
                android:textColor="@color/titlebarcolor"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/email_address_content"
                android:textColor="@color/bottom_gray"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_bg" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/company_name"
        android:textColor="@color/bottom_gray"
        android:textSize="10sp" />

</RelativeLayout>