<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_backup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_backup_warning"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/titlebarcolor"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/backup"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_text_size" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_backup_warning_down"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height">

        <ImageView
            android:id="@+id/iv_backup"
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="43dp"
            android:scaleType="fitXY"
            android:src="@drawable/backup" />

        <TextView
            android:id="@+id/tv_cretea_wallet_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_backup"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="28dp"
            android:text="@string/create_wallet_success"
            android:textColor="@color/titlebarcolor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mnemonic_backup_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_cretea_wallet_success"
            android:layout_marginLeft="47dp"
            android:layout_marginRight="47dp"
            android:layout_marginTop="9dp"
            android:text="@string/create_wallet_success_warning"
            android:textColor="@color/bottom_gray"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/mnemonic_warning_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mnemonic_backup_warning"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="10dp"
            android:text="@string/mnemonic_warning_1"
            android:textColor="@color/bottom_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/mnemonic_warning_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mnemonic_warning_1"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="5dp"
            android:text="@string/mnemonic_warning_2"
            android:textColor="@color/bottom_gray"
            android:textSize="12sp" />


        <Button
            android:id="@+id/btn_backup"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="38dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/shape_button"
            android:text="@string/backup_wallet"
            android:textColor="@color/white" />

    </RelativeLayout>


</RelativeLayout>